--- a/weather app/style.css
+++ b/weather app/style.css
@@ -4,17 +4,18 @@
     text-transform: capitalize;
     box-sizing: border-box;
     font-family: monospace;
-    
 }
+
 body{
     background-color: #222;
 }
+
 input:focus{
     outline: none;
-
 }
+
 .card{
-    width: 99%;
+    width: 95%;
     max-width: 470px;
     background: linear-gradient(135deg , #00feba , #5b548a);
     color: #fff;
@@ -23,13 +24,14 @@ input:focus{
     padding: 40px 35px;
     text-align: center;
 }
+
 .search{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
+
 .search input{
     border:  0;
     outline: 0;
@@ -41,8 +43,8 @@ input:focus{
     flex: 1;
     margin-right: 16px;
     font-size: 18px;
-    
 }
+
 .search button{
     border:  0;
     outline: 0;
@@ -51,56 +53,108 @@ input:focus{
     width: 60px;
     height: 60px;
     cursor: pointer;
-
-
 }
+
 .search button img{
     width: 16px;
-
 }
+
 .weather-icon{
     width: 170px;
     margin-top: 30px;
 }
+
 .weather h1{
     font-size: 80px;
     font-weight: 500;
 }
+
 .weather h2{
     font-size: 25px;
     font-weight: 400;
     margin-top: -10px;
-
 }
+
 .details{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px ;
-    margin-top: 50px ;
+    padding: 0 20px;
+    margin-top: 50px;
 }
+
 .col{
     display: flex;
     align-items: center;
     text-align: left;
-
 }
 
 .col img{
     width: 40px;
     margin-right: 10px;
 }
-.humidity , .wind {
-font-size: 28px;
-margin-top: -6px ;
+
+.humidity, .wind {
+    font-size: 28px;
+    margin-top: -6px;
 }
+
 .weather {
     display: none;
 }
+
 .error{
-    text-align:  left;
-    margin-left:10px;
+    text-align: left;
+    margin-left: 10px;
     font-size: 14px;
-    margin-top: 10px ;
+    margin-top: 10px;
     display: none;
+}
+
+/* Responsive Styling for Mobile Devices */
+@media only screen and (max-width: 600px) {
+    .card {
+        width: 90%;
+        padding: 20px;
+        margin: 50px auto 0;
+    }
+
+    .search input {
+        height: 45px;
+        padding: 8px 20px;
+        font-size: 16px;
+    }
+
+    .search button {
+        width: 50px;
+        height: 50px;
+    }
+
+    .weather-icon {
+        width: 140px;
+    }
+
+    .weather h1 {
+        font-size: 60px;
+    }
+
+    .weather h2 {
+        font-size: 20px;
+    }
+
+    .details {
+        flex-direction: column;
+        margin-top: 30px;
+        padding: 0;
+    }
+
+    .col {
+        margin-bottom: 20px;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .humidity, .wind {
+        font-size: 20px;
+    }
 }
